testfx/errors/error_tests/edge_09_return_keyword.fx
// 测试: 使用 return 关键字
add := (a, b) {
    return a + b
}
println(add(1, 2))
